force-app/main/default/objects/Cross_event_information_report__c/Cross_event_information_report__c.object-meta.xml
<CustomObject>
    <label>Event</label>
    <nameField>
        <label>Cross event information report</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>