force-app/main/default/objects/Cross_event_information_report__c/fields/Community_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Community_Manager_Email__c</fullName>
    <label>Community Manager Email</label>
    <type>Email</type>
</CustomField>