force-app/main/default/objects/Cross_event_information_report__c/fields/Community_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Community_Manager_Name__c</fullName>
    <label>Community Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>