force-app/main/default/objects/Cross_event_information_report__c/fields/Community_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>Community_Manager_Phone__c</fullName>
    <label>Community Manager Phone</label>
    <type>Phone</type>
</CustomField>