force-app/main/default/objects/Cross_event_information_report__c/fields/Division_1__c.field-meta.xml
<CustomField>
    <fullName>Division_1__c</fullName>
    <label>Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>