force-app/main/default/objects/Cross_event_information_report__c/fields/Event_date__c.field-meta.xml
<CustomField>
    <fullName>Event_date__c</fullName>
    <label>Event date</label>
    <type>Date</type>
</CustomField>