force-app/main/default/objects/Cross_event_information_report__c/fields/Event_Format__c.field-meta.xml
<CustomField>
    <fullName>Event_Format__c</fullName>
    <label>Event Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>