force-app/main/default/objects/Cross_event_information_report__c/fields/Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_ID__c</fullName>
    <label>Event ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>