force-app/main/default/objects/Cross_event_information_report__c/fields/Event_Language_Spanish__c.field-meta.xml
<CustomField>
    <fullName>Event_Language_Spanish__c</fullName>
    <label>Event Language Spanish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>