force-app/main/default/objects/Cross_event_information_report__c/fields/Event_name__c.field-meta.xml
<CustomField>
    <fullName>Event_name__c</fullName>
    <label>Event name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>