force-app/main/default/objects/Cross_event_information_report__c/fields/Event_Start_time__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_time__c</fullName>
    <label>Event Start time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>