force-app/main/default/objects/Cross_event_information_report__c/fields/Event_status__c.field-meta.xml
<CustomField>
    <fullName>Event_status__c</fullName>
    <label>Event status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>