force-app/main/default/objects/Cross_event_information_report__c/fields/Exago_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Exago_Start_Time__c</fullName>
    <label>Exago Start Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>