force-app/main/default/objects/Cross_event_information_report__c/fields/Exago_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Exago_Time_Zone__c</fullName>
    <label>Exago Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>