force-app/main/default/objects/Cross_event_information_report__c/fields/Field_51__c.field-meta.xml
<CustomField>
    <fullName>Field_51__c</fullName>
    <label>Field 51</label>
    <length>255</length>
    <type>Text</type>
</CustomField>