force-app/main/default/objects/Cross_event_information_report__c/fields/Financial_Health_Content_Title__c.field-meta.xml
<CustomField>
    <fullName>Financial_Health_Content_Title__c</fullName>
    <label>Financial Health Content Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>