force-app/main/default/objects/Cross_event_information_report__c/fields/Financial_Health_Description_FDIC_Mone_1__c.field-meta.xml
<CustomField>
    <fullName>Financial_Health_Description_FDIC_Mone_1__c</fullName>
    <label>Financial Health Description - FDIC Mone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>