force-app/main/default/objects/Cross_event_information_report__c/fields/Financial_Health_Description_Students__c.field-meta.xml
<CustomField>
    <fullName>Financial_Health_Description_Students__c</fullName>
    <label>Financial Health Description - Students</label>
    <length>255</length>
    <type>Text</type>
</CustomField>