force-app/main/default/objects/Cross_event_information_report__c/fields/Hybrid_Event_Type_Spanish__c.field-meta.xml
<CustomField>
    <fullName>Hybrid_Event_Type_Spanish__c</fullName>
    <label>Hybrid Event Type Spanish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>