force-app/main/default/objects/Cross_event_information_report__c/fields/In_person_Event_Type_Spanish__c.field-meta.xml
<CustomField>
    <fullName>In_person_Event_Type_Spanish__c</fullName>
    <label>In-person Event Type Spanish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>