force-app/main/default/objects/Cross_event_information_report__c/fields/MRF_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>MRF_Request_ID__c</fullName>
    <label>MRF Request ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>