force-app/main/default/objects/Cross_event_information_report__c/fields/Program_manager__c.field-meta.xml
<CustomField>
    <fullName>Program_manager__c</fullName>
    <label>Program manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>