force-app/main/default/objects/Cross_event_information_report__c/fields/Student_Subsegment__c.field-meta.xml
<CustomField>
    <fullName>Student_Subsegment__c</fullName>
    <label>Student Subsegment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>