force-app/main/default/objects/Cross_event_information_report__c/fields/Venue_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Venue_Address_1__c</fullName>
    <label>Venue Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>