force-app/main/default/objects/Cross_event_information_report__c/fields/Venue_Email__c.field-meta.xml
<CustomField>
    <fullName>Venue_Email__c</fullName>
    <label>Venue Email</label>
    <type>Email</type>
</CustomField>