force-app/main/default/objects/Cross_event_information_report__c/fields/Venue_PostcodeZIP__c.field-meta.xml
<CustomField>
    <fullName>Venue_PostcodeZIP__c</fullName>
    <label>Venue Postcode/ZIP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>