force-app/main/default/objects/Cross_event_information_report__c/fields/Virtual_Event_Type_Spanish__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Event_Type_Spanish__c</fullName>
    <label>Virtual Event Type Spanish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>