force-app/main/default/objects/Cross_event_information_report__c/fields/Zoom_Number__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Number__c</fullName>
    <label>Zoom Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>