force-app/main/default/objects/Cross_event_information_report__c/fields/Zoom_Passcode__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Passcode__c</fullName>
    <label>Zoom Passcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>