force-app/main/default/objects/Cross_event_information_report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_ID__c</columns>
    <columns>Event_name__c</columns>
    <columns>Event_date__c</columns>
    <columns>Event_end_date__c</columns>
    <columns>Event_created_date__c</columns>
    <columns>Event_status__c</columns>
    <columns>Program_manager__c</columns>
    <columns>Venue_Country__c</columns>
    <columns>Event_type__c</columns>
    <columns>Division__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>